--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <!-- NameTag Color -->
         <!-- Paragraph Input -->
         <input type="text" id="input"onkeyup="OutputText()" class="inputtextpara" placeholder="Sample text sounds tasty...">
+        <!-- Credits -->
+        <p class="credits">Images from: <a href="https://www.tumblr.com/triviacrossing">@triviacrossing</a></p>
     </div2>
 
 </body>
